Fixed logo widths on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,8 +74,13 @@ a {
     text-align: center;
 
     img {
-        max-width: 400px;
+        width: 100%;
     }
+
+    &.event img       { max-width: 400px; }    
+    &.barleys img     { max-width: 320px; }    
+    &.trappe-door img { max-width: 244px; }    
+        
 }
 
 .ticket {
